--- a/src/templates/videoPlayer.html
+++ b/src/templates/videoPlayer.html
@@ -3,6 +3,11 @@
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/<%= id %>" allowFullScreen></iframe>
   </div>
   <div class="video-player-details">
+    <label class="switch">
+      <input type="checkbox">
+      <span class="slider round"></span>
+    <span class="autoplay">Autoplay</span>
+    </label>
     <h3><%= snippet.title %></h3>
     <div><%= snippet.description %></div>
   </div>
